# term-file-explorer

./: CMakeLists.txt  README.md
docs/: README.md  architecture.md  commands-list.md  research.md
docs/adr/: 0001-embedded-terminal.md  0002-struct-vs-class-dir-entry.md  README.md
src/: main.cpp
src/model/: DirEntry.h  FileSystemModel.cpp  FileSystemModel.h
